[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/CharacterSelect.gd" type="Script" id=1]

[node name="CharacterSelect" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="Select" type="Label" parent="."]
margin_left = 125.454
margin_top = 73.8544
margin_right = 228.454
margin_bottom = 87.8544
text = "Select Character"

[node name="Characters" type="ItemList" parent="."]
margin_left = 50.6741
margin_top = 117.325
margin_right = 322.674
margin_bottom = 335.324

[node name="JoinButton" type="Button" parent="."]
margin_left = 130.157
margin_top = 372.037
margin_right = 220.157
margin_bottom = 409.037
text = "Continue"

[node name="NewCharacterButton" type="Button" parent="."]
margin_left = 121.723
margin_top = 506.081
margin_right = 227.723
margin_bottom = 556.078
text = "New Character"

[node name="CharacterFetch" type="HTTPRequest" parent="."]

[node name="Remove" type="Button" parent="."]
margin_left = 110.89
margin_top = 442.505
margin_right = 238.89
margin_bottom = 477.505
text = "Remove Character"
[connection signal="item_selected" from="Characters" to="." method="_on_Characters_item_selected"]
[connection signal="button_up" from="JoinButton" to="." method="_on_JoinButton_button_up"]
[connection signal="button_up" from="NewCharacterButton" to="." method="_on_NewCharacterButton_button_up"]
[connection signal="request_completed" from="CharacterFetch" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="button_up" from="Remove" to="." method="_on_Remove_button_up"]
